--- a/spring/web/interceptor/src/main/webapp/WEB-INF/templates/_base.html
+++ b/spring/web/interceptor/src/main/webapp/WEB-INF/templates/_base.html
@@ -9,19 +9,19 @@
 </head>
 <body style="...">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="/">Home</a></h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="/user/">Home</a></h5>
         <nav class="my-2 mr-md-3">
+            <a class="p-2 text-dark" target="_blank" href="/book/books">Books</a>
             <a class="p-2 text-dark" target="_blank" href="https://www.liaoxuefeng.com/wiki/1252599548343744">Learn</a>
+            <a class="p-2 text-dark" target="_blank" href="/user/users">Users</a>
         </nav>
         {% if user==null %}
-            <a href="/signin" class="btn btn-outline-primary">Sign In</a>
+            <a href="/user/signin" class="btn btn-outline-primary">Sign In</a>
         {% else %}
-            <span>Welcome, <a href="/profile">{{ user.name }}</a> </span>
+            <span>Welcome, <a href="/user/profile">{{ user.name }}</a> </span>
             &nbsp;&nbsp;&nbsp;
-            <a href="/signout" class="btn btn-outline-primary">Sign Out</a>
+            <a href="/user/signout" class="btn btn-outline-primary">Sign Out</a>
         {% endif %}
-        <!-- my additional -->
-        <a href="/list_users" class="p-2 text-dark" target="_blank">list users</a>
     </div>
 
     <div class="container" style="...">
