--- a/spring/web/interceptor/src/main/webapp/WEB-INF/templates/profile.html
+++ b/spring/web/interceptor/src/main/webapp/WEB-INF/templates/profile.html
@@ -3,7 +3,7 @@
 {% block main %}
 
 <h3>Profile</h3>
-<p><img class="rounded" style="..." src="{{ user.imageUrl }}"> </p>
+<!--<p><img class="rounded" style="..." src="{{ user.imageUrl }}"> </p>-->
 <p>Email: {{ user.email }}</p>
 <p>Name: {{ user.name }}</p>
 <p>Registered at: {{ user.createdDateTime }}</p>
